tests/snapshots/examples_fixtures/diagnostics__errors__ModuleScriptCodeError.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/ModuleScriptCodeError.flx
== compile ==
failed (module)
== diagnostics ==
error[E028]: Invalid Module File

Invalid module file: Module files may only contain imports and a single module declaration.

  examples/diagnostics/errors/ModuleScriptCodeError.flx:2:1
  |
2 | 1;
  | ^

Hint:
  Module files must have .flx extension and valid Flux code.


error[E024]: Module Path Mismatch

Module name `Errors.ModuleScriptCodeError` doesn't match file path `examples/diagnostics/errors/ModuleScriptCodeError.flx`.

  examples/diagnostics/errors/ModuleScriptCodeError.flx:1:1
  |
1 | module Errors.ModuleScriptCodeError { fn value() { 1; } }
  | ^

Hint:
  Rename the module or move the file to match.

Found 2 errors across 2 modules.
== stdout ==
<not executed>
